# Day-by-Day-Tracker

./: .coveragerc  .env.example  .env.prod.example  .env.save  .gitignore  Makefile  README.md  TODO  alembic.ini  docker-compose.dev-ts.yaml  docker-compose.dev.yaml  docker-compose.prod-test.yaml  docker-compose.prod.yaml  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
.github/workflows/: deployment.yaml  frontend.yaml  production-images.yaml  tests.yaml
backend/: Dockerfile  api.py  app.py  settings.py
backend/common/: __init__.py  database.py  dependencies.py
backend/migrations/: env.py
backend/migrations/versions/: 6100399daf9f_initial.py
backend/models/: __init__.py  base.py  habit_tracker.py  habits.py  personal.py  ranking.py
backend/routes/: personal.py  ranking.py
backend/schemas/: __init__.py  common.py  personal.py  ranking.py
backend/services/: __init__.py  base.py  personal.py  ranking.py
frontend/: Dockerfile  auth.ts  eslint.config.js  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/app/: ClientLayout.tsx  layout.tsx
frontend/app/(account)/: layout.tsx
frontend/app/(account)/personnel/: page.tsx
frontend/app/(account)/ranking/: page.tsx
frontend/app/(account)/tracker/: page.tsx
frontend/app/(public)/: page.tsx
frontend/app/(public)/login/: page.tsx
frontend/app/login/: page.tsx
frontend/app/personnel/: page.tsx
frontend/assets/svg/: star.tsx
frontend/components/auth/: Logout.tsx  loginForm.tsx  somewhere.ts
frontend/components/common/: PageWrapper.tsx
frontend/components/common/buttons/: rateDayButton.tsx
frontend/components/common/contexts/: personnelContext.tsx
frontend/components/common/errors/: ListErrors.tsx
frontend/components/common/form-inputs/: PasswordInput.tsx  SubmitButton.tsx  (+3 more)
frontend/components/navigation/: SideNavBar.tsx  SideNavItem.tsx
frontend/components/personnel/: UpdateEmailForm.tsx  UpdateInfoForm.tsx  UpdatePasswordForm.tsx
frontend/components/ranking/: RankDay.tsx  RankRow.tsx  RankTable.tsx
frontend/components/tracker/: displayRankingData.tsx  rateDayContext.tsx  rateDayText.tsx  rateDayTracker.tsx
frontend/lib/common/: updateForm.ts
frontend/lib/interfaces/: common.ts  personnel.ts  ranking.ts
frontend/lib/queries/: auth.ts  base.ts  personnel.ts  ranking.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Message.tsx
frontend/src/contexts/: ContextLanding.tsx  ContextPersonnelForms.tsx  ContextRefreshList.tsx  ContextRefreshPersonnelList.tsx
frontend/src/interfaces/: common.ts  personnel.ts  ranking.ts
frontend/src/pages/: LandingPage.tsx  LogInPage.tsx  PersonnelPage.tsx  RankingPage.tsx
frontend/src/scripts/: api.ts
frontend/src/styles/: base.scss  colour_pallets.scss  navbar.scss
frontend/styles/: colour_pallets.scss  global.scss
frontend/styles/common/: form.scss  navigation.scss  tables.scss
frontend/styles/tracker/: ranking.scss
frontend/tests/fixtures/: api_fixture.ts
frontend/types/: next-auth.d.ts
nginx/: nginx.conf
src/: Dockerfile  Dockerfile.worker  api.py  app.py  celery.py  main.py  settings.py
src/common/: __init__.py  celery.py  database.py  dependencies.py  password_hash.py  security.py  upgrade_db.py
src/enums/: __init__.py  task_status.py
src/migrations/: env.py
src/migrations/versions/: 1bd5e2454b89_adding_in_notes_to_ranker.py  6100399daf9f_initial.py  6350c32c93b3_converting_personal_into_an_account_.py  8d5be8a782b8_update.py  8ed3a36ecd34_backup_tracks.py  a73d754c162c_cascade_deletion.py  b0ee5841dd26_task_recording_for_celery.py
src/models/: __init__.py  backup.py  base.py  habit_tracker.py  habits.py  personal.py  ranking.py  task.py
src/routes/: auth.py  personal.py  ranking.py  task.py  task_run.py
src/schemas/: __init__.py  auth.py  backup.py  common.py  personal.py  ranking.py  task.py
src/services/: __init__.py  auth.py  backup.py  base.py  personal.py  ranking.py  task.py
src/tasks/: __init__.py  simulate.py  task_management.py
src/tasks/maintenance/: __init__.py  database_backup.py  database_restore.py
tests/api/: conftest.py  constants.py
tests/api/routes/: test_auth_route.py  test_personal_route.py  test_ranking_route.py  test_task_route.py
tests/api/services/: test_auth_service.py  test_personal_service.py  test_ranking_service.py
tests/api/tasks/: test_simulate_task.py
tests/backend/: conftest.py
tests/backend/routes/: test_personal_route.py  test_ranking_route.py
tests/backend/services/: test_personal_service.py  test_ranking_service.py
(+40 files in other folders)
