[project]
name = "day-by-day-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "black>=25.12.0",
    "fastapi>=0.125.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.6.0",
    "pytest-mock>=3.15.1",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-utils>=0.42.1",
    "types-passlib>=1.7.7.20260211",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
addopts = "--cov=src"

filterwarnings = [
  "ignore:DELETE statement on table .* expected to delete .* row.*:sqlalchemy.exc.SAWarning",
]

[[tool.mypy.overrides]]
module = ["passlib.context"]
ignore_missing_imports = true

[tool.pytest_env]
APP_ENV = "test"
