[project]
name = "day-by-day-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

[project]
dependencies = [
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "celery>=5.6.3",
    "celery-types>=0.26.0",
    "fastapi>=0.128.0",
    "fastapi-pagination>=0.15.12",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-utils>=0.42.1",
    "types-passlib>=1.7.7.20260211",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "black==26.1.0",
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.6.0",
    "pytest-mock>=3.15.1",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 90
show_missing = true
omit = [
    "*/__init__.py",
    "src/api.py",
    "src/app.py",
    "src/common/upgrade_db.py",
    "src/main.py",
    "src/migrations/*",
    "src/tasks/task_management.py",
    "src/settings.py",
]

[[tool.mypy.overrides]]
module = ["passlib.context"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src"

filterwarnings = [
  "ignore:Accessing argon2\\.__version__ is deprecated.*:DeprecationWarning",
  "ignore:DELETE statement on table .* expected to delete .* row.*:sqlalchemy.exc.SAWarning",
]

[tool.pytest_env]
APP_ENV = "test"
