[project]
name = "day-by-day-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "celery>=5.6.3",
    "celery-types>=0.26.0",
    "fastapi>=0.128.0",
    "fastapi-pagination>=0.15.12",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-utils>=0.42.1",
    "types-passlib>=1.7.7.20260211",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.6.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 90
show_missing = true
omit = [
    "*/__init__.py",
    "src/api.py",
    "src/app.py",
    "src/common/upgrade_db.py",
    "src/main.py",
    "src/migrations/*",
    "src/routes/task_run.py",
    "src/tasks/task_management.py",
    "src/settings.py",
]

[tool.pytest.ini_options]
addopts = "--cov=src"

filterwarnings = [
  "ignore:Accessing argon2\\.__version__ is deprecated.*:DeprecationWarning",
  "ignore:DELETE statement on table .* expected to delete .* row.*:sqlalchemy.exc.SAWarning",
]

[tool.pytest_env]
APP_ENV = "test"

[tool.ruff]
target-version = "py313"
fix = true

lint.select = ["I", "F"]
lint.fixable = ["I", "F"]

src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ty]
# ty checks untyped defs by default, so no equivalent needed for:
# check_untyped_defs = true

[tool.ty.rules]
# Equivalent to ignore_missing_imports = true
unresolved-import = "ignore"

[tool.ty.src]
exclude = ["src/migrations/**","tests/**"]
